hphp/hack/test/typecheck/typed_locals/if-error.php.exp
File "if-error.php", line 20, characters 3-4:
Variable `$z` is undefined, or not always defined. (Naming[2050])
  File "if-error.php", line 19, characters 3-9:
  Did you mean `$y` instead?
File "if-error.php", line 18, characters 3-9:
Typing error (Typing[4110])
  File "if-error.php", line 12, characters 14-16:
  Expected `int`
  File "if-error.php", line 18, characters 8-9:
  But got `string`
File "if-error.php", line 19, characters 3-9:
Typing error (Typing[4110])
  File "if-error.php", line 15, characters 14-14:
  Expected `J`
  File "if-error.php", line 9, characters 27-27:
  But got `I`
File "if-error.php", line 21, characters 3-9:
Typing error (Typing[4110])
  File "if-error.php", line 16, characters 14-16:
  Expected `int`
  File "if-error.php", line 21, characters 8-9:
  But got `string`
